fixed random margin issue while using side nav filtering on mobile

--- a/main.css
+++ b/main.css
@@ -104,12 +104,6 @@ img {
 }
 
 /* Used for filtering streamers by online or offline status */
-/*.showOnline {
-	display: contents;
-	margin-top: 0px;
-	margin-bottom: 0px;
-} */
-
 .hideOffline {
 	display: none;
 	margin-top: 0px;
@@ -121,12 +115,6 @@ img {
 	margin-top: 0px;
 	margin-bottom: 0px;
 }
-
-/*.showOffline {
-	display: contents;
-	margin-top: 0px;
-	margin-bottom: 0px;
-} */
 
 /* Active for anything larger than 767 px, laptop sized */
 @media screen and (min-width: 768px){
